src/default-backend/default-backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  labels:
    app.kubernetes.io/name: default-backend
    app.kubernetes.io/part-of: default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: default-backend
      app.kubernetes.io/part-of: default-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: default-backend
        app.kubernetes.io/part-of: default-backend
    spec:
      containers:
        - name: default-backend
          image: localhost:5000/default-backend # k8s.gcr.io/defaultbackend-amd64:1.5
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  labels:
    app.kubernetes.io/name: default-backend
    app.kubernetes.io/part-of: default-backend
spec:
  selector:
    app.kubernetes.io/name: default-backend
    app.kubernetes.io/part-of: default-backend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
